--- a/src/fridge_module/default.yaml
+++ b/src/fridge_module/default.yaml
@@ -2,4 +2,5 @@
 # override configs in config.yaml by copying the parameter name and 
 # setting a new value
 interval_seconds: 5   
-server: http://localhost:3000/api/fridgedata  
+#server: http://localhost:3000/api/fridgedata
+server: https://rvacf-test-bb7706080ec2.herokuapp.com/api/fridgedata
