--- a/src/fridge_module/default.yaml
+++ b/src/fridge_module/default.yaml
@@ -2,8 +2,12 @@
 # override configs in config.yaml by copying the parameter name and 
 # setting a new value
 interval_seconds: 5   
+# OLD URLS
 #server: http://localhost:3000/api/fridgedata
-server: https://rvacf-test-bb7706080ec2.herokuapp.com/api/fridgedata
+#server: https://rvacf-test-bb7706080ec2.herokuapp.com/api/fridgedata
+# server: https://al6mmf5bsd.execute-api.us-east-1.amazonaws.com/flaskBot/retrieveSensorData
+# THE REAL URL
+server: https://al6mmf5bsd.execute-api.us-east-1.amazonaws.com/queryData/retrieveSensorData
 
 headers:
   Discord_header:
