--- a/src/fridge_module/default.yaml
+++ b/src/fridge_module/default.yaml
@@ -2,6 +2,7 @@
 # override configs in config.yaml by copying the parameter name and 
 # setting a new value
 interval_seconds: 5   
+door_sensor_pin: 18
 # OLD URLS
 #server: http://localhost:3000/api/fridgedata
 #server: https://rvacf-test-bb7706080ec2.herokuapp.com/api/fridgedata
@@ -9,6 +10,7 @@ interval_seconds: 5
 # THE REAL URL
 server: https://al6mmf5bsd.execute-api.us-east-1.amazonaws.com/queryData/retrieveSensorData
 
+# discord bot
 headers:
   Discord_header:
     Authorization: 'Bot ${token}'
