--- a/src/fridge_module/fridge_module.service
+++ b/src/fridge_module/fridge_module.service
@@ -9,8 +9,8 @@ WorkingDirectory=/opt/fridge_module
 Restart=always
 User=root
 Group=nogroup
-StandardOutput=append:/opt/fridge_module/fridge_module_log.log
-StandardError=append:/opt/fridge_module/fridge_module_err.log
+StandardOutput=journal
+StandardError=journal
 
 [Install]
 WantedBy=multi-user.target
