--- a/src/fridge_module/default.yaml
+++ b/src/fridge_module/default.yaml
@@ -1,7 +1,7 @@
 # this file contains default parameters for the refrigerator module. 
 # override configs in config.yaml by copying the parameter name and 
 # setting a new value
-interval_seconds: 1800 # once an hour
+interval_seconds: 2 # every 2 seconds
 door_sensor_pin: 18
 # OLD URLS
 #server: http://localhost:3000/api/fridgedata
@@ -10,9 +10,3 @@ door_sensor_pin: 18
 # THE REAL URL
 server: https://al6mmf5bsd.execute-api.us-east-1.amazonaws.com/prod/api/writeData
 
-# discord bot
-headers:
-  Discord_header:
-    Authorization: 'Bot ${token}'
-    User-Agent: 'DiscordBot ${User-Agent}'
-    Content-Type: 'application/json'
