--- a/src/dash/requirements.txt
+++ b/src/dash/requirements.txt
@@ -6,8 +6,10 @@ botocore==1.37.12
 branca==0.8.1
 cachetools==5.5.2
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+cryptography==44.0.2
 decorator==5.2.1
 folium==0.19.5
 future==1.0.0
@@ -28,6 +30,7 @@ pillow==11.1.0
 plotly==6.0.0
 protobuf==5.29.3
 pyarrow==19.0.1
+pycparser==2.22
 pydeck==0.9.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -40,6 +43,8 @@ s3transfer==0.11.4
 six==1.17.0
 smmap==5.0.2
 streamlit==1.43.2
+streamlit-autorefresh==1.0.1
+streamlit-cookies-manager==0.2.0
 streamlit_folium==0.24.0
 tenacity==9.0.0
 toml==0.10.2
